dawarich/network-policy-dawarich-allow-egress-web.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dawarich-allow-egress-web
  namespace: dawarich
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - dawarich
          - photon
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 443
    - to:
        - ipBlock:
            cidr: ::/0
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 443
